--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "Batman English",
+  "name": "Batman",
   "description": "Telegram's sassiest group manager. Modular Telegram group management bot!",
   "keywords": [
     "telegram",
@@ -9,7 +9,7 @@
     "manager",
     "3"
   ],
-  "repository": "hhttps://github.com/MrBootsBoots/Batman_Robot",
+  "repository": "https://github.com/MrBootsBoots/Batman_Robot",
   "env": {
     "ENV": {
       "description": "Setting this to ANYTHING will enable env variables",
