--- a/app.json
+++ b/app.json
@@ -75,6 +75,11 @@
       "description": "Which sticker to use when banning people. Use https://telegram.dog/ShowJsonBot to get the file_id",
       "value": "CAADBAAD6AMAAkJ_EQNu_RjOszbmnxYE"
     },
+    "AI_API_KEY": {
+      "description": "Make your bot talk using Intellivoid's chatbot API, get your key from https://coffeehouse.intellivoid.net/"
+      "value": ""
+    }
+  },
   "addons": [
     {
       "plan": "heroku-postgresql",
