--- a/app.json
+++ b/app.json
@@ -1,13 +1,12 @@
 {
-  "name": "Batman",
-  "description": "Telegram's sassiest group manager. Modular Telegram group management bot!",
-  "keywords": [
-    "telegram",
-    "best",
-    "group",
-    "manager",
-    "3"
-  ],
+   "addons": [
+      {
+         "options": {
+            "version": "9.5"
+         },
+         "plan": "heroku-postgresql"
+      }
+   ],
   "repository": "https://github.com/MrBootsBoots/Batman_Robot",
   "env": {
     "ENV": {
@@ -79,12 +78,13 @@
       "value": ""
     }
   },
-  "addons": [
-    {
-      "plan": "heroku-postgresql",
-      "options": {
-        "version": "10"
-      }
-    }
-  ]
-}
+{
+  "name": "Batman",
+  "description": "Telegram's sassiest group manager. Modular Telegram group management bot!",
+  "keywords": [
+    "telegram",
+    "best",
+    "group",
+    "manager",
+    "3"
+  ],
